--- a/src/index.css
+++ b/src/index.css
@@ -192,7 +192,62 @@ code {
   color: black;
 }
 
+.previous {
+  background-color: #f1f1f1;
+  color: black;
+  border-radius: 1em;  
+  padding: 0.5em;
+  padding-left: 1em;
+  padding-right: 1em;
+  text-decoration: none;
+  display: inline-block;
+  margin-right: 70vw;
+  font-size: small;
+}
+
 /* ----------Pop up------------ */
 .popup-text{
   text-align: center;
+}
+
+/* -----------Results page--------------- */
+.input-Container{
+  width:70vw;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center; 
+  font-size: 0;
+  display: flex;
+  flex-direction: column;
+}
+.input-Container h2{
+  font-size: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  text-decoration: underline;
+}
+.input-Container div{
+  font-size: 12px;
+  margin-top: -10px;
+  margin-bottom: -10px;
+}
+.input-Container p{
+  display:inline-block;
+}
+.input-Container h5{
+  display:inline-block;
+}
+.calculate {
+  border-radius: 1em;
+  background-color: blue;
+  margin-top: 1.5em;
+  height: 3em;
+  width: 15em;
+  color: white;
+  border: blue;
+  margin-left: auto;
+  margin-right: auto;
+}
+.calculate:hover {
+  opacity: 50%;
 }
